// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-preview/PreviewNavigation render() should render correctly with a filled collection 0 1`] = `
<CustomRouter
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
  location={
    {
      "hash": "",
      "pathname": "/activity/tasks/1234",
    }
  }
  match={
    {
      "isExact": true,
      "params": {
        "0": "",
        "activeFeedEntryId": undefined,
        "activeTab": "activity",
        "deeplink": "tasks",
        "fileVersionId": "1234",
        "filteredTemplateIds": [],
      },
      "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
      "url": "/activity/tasks/1234",
    }
  }
>
  <Router
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    location={
      {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      }
    }
    match={
      {
        "isExact": true,
        "params": {
          "0": "",
          "activeFeedEntryId": undefined,
          "activeTab": "activity",
          "deeplink": "tasks",
          "fileVersionId": "1234",
          "filteredTemplateIds": [],
        },
        "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
        "url": "/activity/tasks/1234",
      }
    }
  >
    <PreviewNavigation
      collection={
        [
          "a",
          "b",
          "c",
          "d",
          "e",
          "f",
          "g",
          "h",
          "i",
          "j",
        ]
      }
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      onNavigateLeft={[Function]}
      onNavigateRight={[Function]}
    />
  </Router>
</CustomRouter>
`;

exports[`elements/content-preview/PreviewNavigation render() should render correctly with a filled collection 1 1`] = `
<CustomRouter
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
  location={
    {
      "hash": "",
      "pathname": "/activity/tasks/1234",
    }
  }
  match={
    {
      "isExact": true,
      "params": {
        "0": "",
        "activeFeedEntryId": undefined,
        "activeTab": "activity",
        "deeplink": "tasks",
        "fileVersionId": "1234",
        "filteredTemplateIds": [],
      },
      "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
      "url": "/activity/tasks/1234",
    }
  }
>
  <Router
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    location={
      {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      }
    }
    match={
      {
        "isExact": true,
        "params": {
          "0": "",
          "activeFeedEntryId": undefined,
          "activeTab": "activity",
          "deeplink": "tasks",
          "fileVersionId": "1234",
          "filteredTemplateIds": [],
        },
        "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
        "url": "/activity/tasks/1234",
      }
    }
  >
    <PreviewNavigation
      collection={
        [
          "a",
          "b",
          "c",
          "d",
          "e",
          "f",
          "g",
          "h",
          "i",
          "j",
        ]
      }
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      onNavigateLeft={[Function]}
      onNavigateRight={[Function]}
    />
  </Router>
</CustomRouter>
`;

exports[`elements/content-preview/PreviewNavigation render() should render correctly with a filled collection 9 1`] = `
<CustomRouter
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
  location={
    {
      "hash": "",
      "pathname": "/activity/tasks/1234",
    }
  }
  match={
    {
      "isExact": true,
      "params": {
        "0": "",
        "activeFeedEntryId": undefined,
        "activeTab": "activity",
        "deeplink": "tasks",
        "fileVersionId": "1234",
        "filteredTemplateIds": [],
      },
      "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
      "url": "/activity/tasks/1234",
    }
  }
>
  <Router
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    location={
      {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      }
    }
    match={
      {
        "isExact": true,
        "params": {
          "0": "",
          "activeFeedEntryId": undefined,
          "activeTab": "activity",
          "deeplink": "tasks",
          "fileVersionId": "1234",
          "filteredTemplateIds": [],
        },
        "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
        "url": "/activity/tasks/1234",
      }
    }
  >
    <PreviewNavigation
      collection={
        [
          "a",
          "b",
          "c",
          "d",
          "e",
          "f",
          "g",
          "h",
          "i",
          "j",
        ]
      }
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      onNavigateLeft={[Function]}
      onNavigateRight={[Function]}
    />
  </Router>
</CustomRouter>
`;

exports[`elements/content-preview/PreviewNavigation render() should render correctly with an empty collection 1`] = `
<CustomRouter
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
  location={
    {
      "hash": "",
      "pathname": "/activity/tasks/1234",
    }
  }
  match={
    {
      "isExact": true,
      "params": {
        "0": "",
        "activeFeedEntryId": undefined,
        "activeTab": "activity",
        "deeplink": "tasks",
        "fileVersionId": "1234",
        "filteredTemplateIds": [],
      },
      "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
      "url": "/activity/tasks/1234",
    }
  }
>
  <Router
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    location={
      {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      }
    }
    match={
      {
        "isExact": true,
        "params": {
          "0": "",
          "activeFeedEntryId": undefined,
          "activeTab": "activity",
          "deeplink": "tasks",
          "fileVersionId": "1234",
          "filteredTemplateIds": [],
        },
        "path": "/:activeTab/:deeplink/:fileVersionId?/:activeFeedEntryId?",
        "url": "/activity/tasks/1234",
      }
    }
  >
    <PreviewNavigation
      collection={[]}
      currentIndex={0}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      onNavigateLeft={[Function]}
      onNavigateRight={[Function]}
    />
  </Router>
</CustomRouter>
`;
